dbent-derive/tests/ui/entity_no_key.rs
use dbent_derive::Entity;

#[derive(Entity)]
struct Test {
    id: Option<usize>,
    data: String,
}

fn main() {}
